HOCS-4970: Test K8S deployment.

--- a/kube/kd/deployment.yaml
+++ b/kube/kd/deployment.yaml
@@ -65,13 +65,13 @@ spec:
             - name: CMS_LAGAN_ADMIN_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: {{.KUBE_NAMESPACE}}-mssql
-                  key: cms_lagan_admin_username
+                  name: {{.KUBE_NAMESPACE}}-lagan
+                  key: username
             - name: CMS_LAGAN_ADMIN_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{.KUBE_NAMESPACE}}-mssql
-                  key: cms_lagan_admin_password
+                  name: {{.KUBE_NAMESPACE}}-lagan
+                  key: password
             - name: AWS_DEFAULT_REGION
               value: 'eu-west-2'
             - name: S3_CMS_BUCKET
