Data migration toolbox (#22)
HOCS-4970: Modified version of the toolbox for CMS data migration. The toolbox contains Microsoft sqlcmd command line tool for SQL Server.

--- a/.drone.yml
+++ b/.drone.yml
@@ -25,46 +25,27 @@ platform:
   arch: amd64
 
 trigger:
-# branch:
-#   - main
+  branch:
+    - cms-data-migration
   event:
     - push
 
 steps:
-  - name: build & push safe
+  - name: build & push
     image: plugins/docker
     depends_on:
       - clone
     settings:
       registry: quay.io
       repo: quay.io/ukhomeofficedigital/hocs-toolbox
-      target: safe
       tags:
-        - build_${DRONE_BUILD_NUMBER}
-        - ${DRONE_COMMIT_SHA}-safe
-        - latest
+        - ${DRONE_COMMIT_SHA}-cms-migration
     environment:
       DOCKER_PASSWORD:
         from_secret: QUAY_ROBOT_TOKEN
       DOCKER_USERNAME: ukhomeofficedigital+hocs_quay_robot
-
-  - name: build & push scary
-    depends_on:
-      - build & push safe
-    image: plugins/docker
-    settings:
-      registry: quay.io
-      repo: quay.io/ukhomeofficedigital/hocs-toolbox
-      target: dangerous
-      tags:
-        - ${DRONE_COMMIT_SHA}-dangerous
-    environment:
-      DOCKER_PASSWORD:
-        from_secret: QUAY_ROBOT_TOKEN
-      DOCKER_USERNAME: ukhomeofficedigital+hocs_quay_robot
-
+      
 ---
-
 kind: pipeline
 type: kubernetes
 name: deploy
@@ -73,96 +54,20 @@ depends_on:
 
 trigger:
   branch:
-    - main
+    - cms-data-migration
   event:
     - push
 
 steps:
-  - &deploySafe
-      name: cs-demo
-      image: quay.io/ukhomeofficedigital/kd
-      environment:
-        VERSION: ${DRONE_COMMIT_SHA}-safe
-        KUBE_TOKEN:
-          from_secret: KUBE_TOKEN_SAFE
-      commands:
-        - cd kube
-        - ./deploy.sh
-      depends_on:
-        - clone
-  - &deployDangerous
-      name: hocs-qax
-      image: quay.io/ukhomeofficedigital/kd
-      environment:
-        VERSION: ${DRONE_COMMIT_SHA}-dangerous
-        KUBE_TOKEN:
-          from_secret: KUBE_TOKEN
-      commands:
-        - cd kube
-        - ./deploy.sh
-      depends_on:
-        - clone
-
-  - <<: *deploySafe
-    name: cs-dev
-  - <<: *deploySafe
-    name: cs-qa
- # - <<: *deploySafe # in definition ^
- #   name: cs-demo
-  - <<: *deploySafe
-    name: wcs-dev
-  - <<: *deploySafe
-    name: wcs-qa
-  - <<: *deploySafe
-    name: wcs-demo
-  - <<: *deployDangerous
-    name: hocs-delta
-  - <<: *deployDangerous
-    name: hocs-gamma
-  - <<: *deployDangerous
-    name: hocs-epsilon
- #- <<: *deployDangerous # in definition ^
- #  name: hocs-qax
----
-
-# we're doing this as a promote so one can manually run it
-# normally this is defined in hocs-data's .drone.yml
-
-kind: pipeline
-type: kubernetes
-name: teardown
-
-trigger:
-  event:
-    - promote
-
-steps:
-  - name: teardown gamma
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
+  - name: cs-dev-migration
+    image: quay.io/ukhomeofficedigital/kd
+    environment:
+      VERSION: ${DRONE_COMMIT_SHA}-cms-migration
+      KUBE_TOKEN:
+        from_secret: KUBE_TOKEN_SAFE
     commands:
       - cd kube
-      - bash ./teardown.sh
-    environment:
-      ENVIRONMENT: hocs-gamma
-      KUBE_TOKEN:
-        from_secret: hocs_toolbox_hocs_gamma
-    when:
-      target:
-        - teardown
-        - teardown-gamma
-
-  - name: teardown delta
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
-    commands:
-      - cd kube
-      - bash ./teardown.sh
-    environment:
-      ENVIRONMENT: hocs-delta
-      KUBE_TOKEN:
-        from_secret: hocs_toolbox_hocs_delta
-    when:
-      target:
-        - teardown
-        - teardown-delta
-
+      - ./deploy.sh
+    depends_on:
+      - clone
 ...
