--- a/.drone.yml
+++ b/.drone.yml
@@ -39,22 +39,27 @@ steps:
       - git fetch --tags
       - git checkout $${VERSION}
 
-  - name: deploy to prod
+  - &deploy
+    name: cs-prod
     image: quay.io/ukhomeofficedigital/kd
+    environment:
+      VERSION: ${DRONE_TAG}
+      KUBE_TOKEN:
+        from_secret: hocs_toolbox_prod
+      KUBE_SERVER: https://kube-api-prod.prod.acp.homeoffice.gov.uk
     commands:
       - cd kube
       - ./deploy.sh
-    environment:
-      ENVIRONMENT: ${DRONE_DEPLOY_TO}
-      KUBE_TOKEN:
-        from_secret: hocs_toolbox_${DRONE_DEPLOY_TO/-/_}
-      KUBE_SERVER: https://kube-api-prod.prod.acp.homeoffice.gov.uk
     depends_on:
       - fetch and checkout
     when:
       target:
         include:
           - "*-prod"
+
+  - <<: *deploy
+    name: wcs-prod
+
 
 ---
 kind: pipeline
