--- a/.drone.yml
+++ b/.drone.yml
@@ -27,6 +27,42 @@ steps:
 ---
 kind: pipeline
 type: kubernetes
+name: deploy
+trigger:
+  event:
+    - promote
+
+steps:
+  - name: fetch and checkout
+    image: alpine/git
+    commands:
+      - git fetch --tags
+      - git checkout $${VERSION}
+
+  - &deploy
+    name: cs-prod
+    image: quay.io/ukhomeofficedigital/kd
+    environment:
+      VERSION: ${DRONE_TAG}
+      KUBE_TOKEN:
+        from_secret: hocs_toolbox_prod
+    commands:
+      - cd kube
+      - ./deploy.sh
+    depends_on:
+      - fetch and checkout
+    when:
+      target:
+        include:
+          - "*-prod"
+
+  - <<: *deploy
+    name: wcs-prod
+
+
+---
+kind: pipeline
+type: kubernetes
 name: build tag
 trigger:
   event:
@@ -71,7 +107,7 @@ steps:
       environment:
         VERSION: ${DRONE_TAG}
         KUBE_TOKEN:
-          from_secret: hocs_toolbox
+          from_secret: hocs_toolbox_notprod
       commands:
         - cd kube
         - ./deploy.sh
@@ -96,7 +132,3 @@ steps:
     name: hocs-epsilon
   - <<: *deploy
     name: hocs-qax
-  - <<: *deploy
-    name: cs-prod
-  - <<: *deploy
-    name: wcs-prod
