HOCS-5061 Feedback from PR, merge scripts, change to downscaler

--- a/kube/kd/deployment.yaml
+++ b/kube/kd/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     version: {{.VERSION}}
   annotations:
-    downscaler/uptime: {{.UPTIME_PERIOD}}
+    downscaler/downscale-period: {{.DOWNSCALE_PERIOD}}
 spec:
   replicas: 1
   selector:
