--- a/.drone.yml
+++ b/.drone.yml
@@ -45,7 +45,7 @@ steps:
     environment:
       VERSION: ${DRONE_TAG}
       KUBE_TOKEN:
-        from_secret: hocs_toolbox_prod
+        from_secret: decs_prod_token
     commands:
       - cd kube
       - ./deploy.sh
@@ -107,7 +107,7 @@ steps:
       environment:
         VERSION: ${DRONE_TAG}
         KUBE_TOKEN:
-          from_secret: hocs_toolbox_notprod
+          from_secret: decs_notprod_token
       commands:
         - cd kube
         - ./deploy.sh
