Bring cms-migration branch up to main (#33)
* HOCS-5066 Fix db scripts not being in container (#23)

The previous COPY syntax copied only shell scripts. This commit changes
it to copy over whole folders, meaning that the db scripts are actually
copied into the image.

* Re-add accidentally uncommented lines

I commented out the "only on main" part of the pipeline while working on
my branch, but we forgot to add it back in before merging to main.

* Update README.md (#2)

* HOCS-5061 Fix database secrets

The database secrets in environments have moved. This commit fixes the
references to them, and exposes the new read-only credentials for use in
our scripts.

To save on lines of repeated YAML, we use the "split" feature of kd's Go
templating to define the secret structure only once.

This commit amends existing database scripts to use the RO version, and
adds extra read-write versions of the database scripts that will only
appear should "dangerous" be targeted in the Dockerfile.

* Mark database secrets as optional

This commit makes the database secrets optional. They're not actually
required to make the container useful, so it's okay to let the container
start without them.

* HOCS-5061 use correct database name secret and add casework database

* Remove accidental double-underscore

* HOCS-5133: Remove unwanted scripts

* HOCS-5133: Merge the dangerous and safe deployments but put the scripts in a different folder

* HOCS-5133: Replace Dockerfile with lightweight hocs base image

* HOCS-5133: Remove less util

* HOCS-5133: Rename deploySafe to deploy in drone.yml

* HOCS-5133: Remove kubectl from apk add

* HOCS-5133: Make cs-dev the default and remove from template

* HOCS-5133: fix shellcheck issue

* HOCS-5133: Add dronetree and tag events

* HOCS-5133: Add semver actions

* HOCS-5133: rename root to uid 0 from PR feedback

* HOCS-5133: Keep dockerfile running

* HOCS-5133: Keep dockerfile running



--- a/.drone.yml
+++ b/.drone.yml
@@ -1,40 +1,16 @@
 ---
 kind: pipeline
 type: kubernetes
-name: lint
-
+name: build
 trigger:
   event:
     - push
-
-steps:
-- name: lint bash
-  image: koalaman/shellcheck-alpine
-  commands:
-    - shellcheck *.sh */*.sh */*/*.sh
-  depends_on:
-    - clone
-
----
-kind: pipeline
-type: kubernetes
-name: build
-
-platform:
-  os: linux
-  arch: amd64
-
-trigger:
   branch:
     - cms-data-migration
-  event:
-    - push
 
 steps:
   - name: build & push
     image: plugins/docker
-    depends_on:
-      - clone
     settings:
       registry: quay.io
       repo: quay.io/ukhomeofficedigital/hocs-toolbox
@@ -44,19 +20,50 @@ steps:
       DOCKER_PASSWORD:
         from_secret: QUAY_ROBOT_TOKEN
       DOCKER_USERNAME: ukhomeofficedigital+hocs_quay_robot
-      
+    depends_on:
+      - clone
+
 ---
 kind: pipeline
 type: kubernetes
 name: deploy
-depends_on:
-  - build
-
 trigger:
-  branch:
-    - cms-data-migration
+  event:
+    - promote
+
+steps:
+  - name: fetch and checkout
+    image: alpine/git
+    commands:
+      - git fetch --tags
+      - git checkout $${VERSION}
+
+  - &deploy
+    name: cs-prod-migration
+    image: quay.io/ukhomeofficedigital/kd
+    environment:
+      VERSION: ${DRONE_TAG}
+      KUBE_TOKEN:
+        from_secret: decs_prod_token
+    commands:
+      - cd kube
+      - ./deploy.sh
+    depends_on:
+      - fetch and checkout
+    when:
+      target:
+        include:
+          - "*-prod-*"
+
+---
+kind: pipeline
+type: kubernetes
+name: build tag
+trigger:
   event:
     - push
+  branch:
+    - cms-data-migration
 
 steps:
   - name: cs-dev-migration
@@ -70,4 +77,5 @@ steps:
       - ./deploy.sh
     depends_on:
       - clone
+
 ...
