--- a/kube/kd/deployment.yaml
+++ b/kube/kd/deployment.yaml
@@ -66,11 +66,13 @@ spec:
                 secretKeyRef:
                   name: {{.KUBE_NAMESPACE}}-lagan
                   key: username
+                  optional: true
             - name: CMS_LAGAN_ADMIN_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: {{.KUBE_NAMESPACE}}-lagan
                   key: password
+                  optional: true
             - name: AWS_DEFAULT_REGION
               value: 'eu-west-2'
             - name: S3_CMS_BUCKET
