--- a/kube/kd/deployment.yaml
+++ b/kube/kd/deployment.yaml
@@ -20,6 +20,14 @@ spec:
     spec:
       imagePullSecrets:
         - name: registry-credentials
+      volumes:
+        - name: cms-data-backup-pv
+          persistentVolumeClaim:
+            claimName: cms-data-backup-pvc
+      securityContext:
+        runAsUser: 10000
+        runAsGroup: 999
+        fsGroup: 999
       containers:
         - name: hocs-toolbox
           image: quay.io/ukhomeofficedigital/hocs-toolbox:{{.VERSION}}
@@ -90,6 +98,9 @@ spec:
                 secretKeyRef:
                   name: {{.KUBE_NAMESPACE}}-s3
                   key: iam_secret_key
+          volumeMounts:
+            - mountPath: "/backups"
+              name: cms-data-backup-pv
           resources:
             limits:
               cpu: 100m
