--- a/helm/hocs-toolbox.yaml
+++ b/helm/hocs-toolbox.yaml
@@ -1,4 +1,4 @@
 ---
 deployment:
   annotations:
-    downscaler/downtime: 'Mon-Sun 00:00-07:55 Europe/London,Mon-Sun 19:00-24:00 Europe/London'
+    downscaler/downtime: "Sat-Sun 00:00-24:00 Europe/London,Mon-Fri 00:00-07:55 Europe/London,Mon-Fri 19:00-24:00 Europe/London"
